<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white"
        android:orientation="vertical" >
         <Button
            android:id="@+id/headpicture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/icon" 
            android:paddingLeft="100dp"
            android:visibility="gone"
            />

         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="张冰洁"
             android:textColor="#000000"
             android:textSize="18sp"
              android:visibility="gone" />

        <Button
            android:id="@+id/btn_left1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/setting" 
             android:visibility="gone"/>

        <Button
            android:id="@+id/btn_left2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/recent" 
             android:visibility="gone"/>

        <Button
            android:id="@+id/btn_left3"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/waitforhandle"
             android:visibility="gone" />

        <Button
            android:id="@+id/btn_left4"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/text" 
             android:visibility="gone"/>

        <Button
            android:id="@+id/btn_left5"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/storehouse" 
             android:visibility="gone"/>

        <CalendarView
            android:id="@+id/calendarView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
             android:visibility="visible"/>

    </LinearLayout>